# PipelineVision

./: .gitignore  LICENSE
.github/workflows/: deploy.yml
backend/: .env.example  main.py  pyproject.toml
backend/app/api/: dependencies.py  router.py
backend/app/api/endpoints/: accounts.py  dashboard.py  jobs.py  logs.py  organization.py  orgs.py  session.py  sse.py  users.py  webhooks.py  workflow_runs.py  workflows.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  account.py  installation.py  job.py  repository.py  runner.py  user_preferences.py
backend/app/middleware/: auth.py  logging.py
backend/app/schemas/: job.py  org.py  user.py  user_settings.py  workflow_run.py
backend/app/services/: github_service.py  membership_service.py  runner_service.py  sse_redis_manager.py  workflow_service.py
backend/app/utils/: logger.py
config/: Caddyfile
docker/: backend.Dockerfile  docker-compose.dev.yaml  docker-compose.yaml
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: app-sidebar.tsx  authenticated-layout.tsx  demo-sidebar.tsx  demo-workflow-run-details.tsx  error-boundary.tsx  job-logs-stream.tsx  job-logs-viewer.tsx  job-logs.tsx  layout-with-onboarding.tsx  live-status-indicator.tsx  login-form.tsx  navigation.tsx  onboarding-screen.tsx  page-layout.tsx  runner-status-overview.tsx  runners-list-example.tsx  runners-list-with-query.tsx  workflow-run-details.tsx  (+1 more)
(+61 files in other folders)
